The event handling events fuction has been appended to the controller IIFE and a button has been added to the HTML DOM to add entries. Two event handlers were added. One will take into account this button being clicked and the other will do the same but listen to the enter keystroke

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 </head>
 <body>
-
+	<button class="add__btn">CLICK THIS TO ADD</button>
 	<script src="script.js"></script>
 </body>
 </html>
