into the HTML document the select tag with two options have been added. Two inputs that take the description of the of the cash flow and the value have been added. In the script.js file the follow has occured: 1) DOMString object that keeps track of the name of selected classes. THe UIcontroller returns two objects of getInput and getDOMstrings. getInput returns the values read at the UI and the getDOMstring returns an object containing the class names. They are both passed to the controller module. At the controller module the UI controller is called and the getDOMstring method is called to get the DOMstring object. The inputAddbutton property is accessed using the querySelector

--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 	<title>Document</title>
 </head>
 <body>
-	<button class="add__btn">CLICK THIS TO ADD</button>
+	<div class = "add">
+		<select class ="add__type">
+			<option value="inc">+</option>
+			<option value="exp">-</option>
+		</select>
+		<input class ="add__description" type = 'text' placeholder="Add description">
+		<input class ="add__value" type = 'number' placeholder="Value">
+		<button class="add__btn">CLICK THIS TO ADD</button>
+	</div>
 	<script src="script.js"></script>
 </body>
 </html>
