The UIcontroller was updated by adding the addListItems public method. This function takes two arguements. The first is the new item that was added. the second is the type (either income or expense). There is a if statement that will choose the template we require. Since the html is a string file it can be manipulated using the replace method. The id,description and value are found and replaced. Finally the html is injected using the insertAdjacentHTML before the div tag. The newHTML variable is inserted to the DOM

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 		<input class ="add__value" type = 'number' placeholder="Value">
 		<button class="add__btn">CLICK THIS TO ADD</button>
 	</div>
+
+	<div class ="income">
+		<div class="income__list"></div>
+	</div>
+
+	<div class ="expense">
+		<div class="expense__list"></div>
+	</div>
+
 	<script src="script.js"></script>
 </body>
 </html>
