--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 	<title>Document</title>
 </head>
 <body>
+	<div class = "top">
+		<div class="budget">
+			<div class="budget__title">Available Budget:</div>
+			<div class="budget__value">$12</div>
+		</div>
+	</div>
+
 	<div class = "add">
 		<select class ="add__type">
 			<option value="inc">+</option>
