A container was added to capture the event bubbling from the delete button. A function that traverses the DOM to the div of class of item was implemented

--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
 		<button class="add__btn">CLICK THIS TO ADD</button>
 	</div>
 
-	<div class ="income">
-		<div class="income__list"></div>
-	</div>
+	<div class = "container">
+		<div class ="income">
+			<div class="income__list"></div>
+		</div>
 
-	<div class ="expense">
-		<div class="expense__list"></div>
+		<div class ="expense">
+			<div class="expense__list"></div>
+		</div>
 	</div>
-
 	<script src="script.js"></script>
 </body>
 </html>
