Added title,month and refactored some code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<div class = "top">
 		<div class="budget">
+			<h1 class ="budet__title--month"></h1>
 			<div class="budget__title">Available Budget:</div>
 			<div class="budget__value">$12</div>
 		</div>
@@ -24,7 +25,6 @@
 	</div>
 
 	<div class = "container item">
-
 		<div class = row>
 			<div class="col-1-of-2">
 				<h2 class = "heading--income">Income</h2>
