Implement BEM methodology for budget summary component in HTML file

--- a/index.html
+++ b/index.html
@@ -6,13 +6,26 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class = "top">
-		<div class="budget">
-			<h1 class ="budet__title--month"></h1>
-			<div class="budget__title">Available Budget:</div>
-			<div class="budget__value">$12</div>
+	<header class = "header">
+		<h1 class = "header__title"></h1>
+		<div class = "header__content">
+			<div class= "summary">
+				<div class = "summary-budget">
+					<h1 class ="summary-budget__date--month">June</h1>
+					<div class="summary-budget__title">Available Budget:</div>
+					<div class="summary-budget__total">$12</div>
+				</div>
+
+				<div class = "summary-income">
+					<div class="summary-income__total"></div>
+				</div>
+
+				<div class = "summary-expense">
+					<div class="summary-expense__total"></div>
+				</div>
+			</div>
 		</div>
-	</div>
+	</header>
 
 	<div class = "add">
 		<select class ="add__type">
