--- a/index.html
+++ b/index.html
@@ -3,29 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Pacifico|Roboto&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 	<header class = "header">
-		<h1 class = "header__title"></h1>
-		<div class = "header__content">
-			<div class= "summary">
-				<div class = "summary-budget">
-					<h1 class ="summary-budget__date--month">June</h1>
-					<div class="summary-budget__title">Available Budget:</div>
-					<div class="summary-budget__total">$12</div>
-				</div>
-
-				<div class = "summary-income">
-					<div class="summary-income__total"></div>
-				</div>
-
-				<div class = "summary-expense">
-					<div class="summary-expense__total"></div>
-				</div>
-			</div>
+		<div class = "header__title">
+			<h1 class = "header__title--primary">Keepatit</h1>
+			<h2 class = "header__title--secondary">Your personal budget assistant</h2>
 		</div>
 	</header>
+
+	<section class = 'summary'>
+			<h3  class = "summary__title"></h3>
+			<div class= "summary__budget">$12</div>
+			<div class= "summary__income"></div>
+			<div class= "summary__expense"></div>
+	</section>
 
 	<div class = "add">
 		<select class ="add__type">
