Bootstrap added to form input

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Pacifico|Roboto&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	
+	 <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -15,22 +17,32 @@
 		</div>
 	</header>
 
-	<section class = 'summary'>
+	<section class = "summary">
 			<h3  class = "summary__title"></h3>
 			<div class= "summary__budget">$12</div>
 			<div class= "summary__income"></div>
 			<div class= "summary__expense"></div>
 	</section>
-
-	<div class = "add">
-		<select class ="add__type">
-			<option value="inc">+</option>
-			<option value="exp">-</option>
-		</select>
-		<input class ="add__description" type = 'text' placeholder="Add description">
-		<input class ="add__value" type = 'number' placeholder="Value">
-		<button class="add__btn">CLICK THIS TO ADD</button>
-	</div>
+	<form>
+	  <div class="row">
+	    <div class="col">
+	      <label for="cashflowType">Type:</label>
+			<select class ="add__type form-control" id = "cashflowType">
+				<option value="inc">+</option>
+				<option value="exp">-</option>
+			</select>
+	    </div>
+	    <div class="col">
+	      <label for="descriptionType">Description:</label>
+		  <input class ="add__description form-control" type = 'text' placeholder="Add description" id="descriptionType">
+	    </div>
+	    <div class="col">
+	      <label for="itemAmount">Amount $:</label>
+		  <input class ="add__value form-control" type = 'number' placeholder="Value" id= "itemAmount">
+	    </div>
+	  </div>
+	  <button class="add__btn">CLICK THIS TO ADD</button>
+	</form>
 
 	<div class = "container item">
 		<div class = row>
@@ -62,6 +74,9 @@
 			</div>
 		</div> -->
 	</div>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src="script.js"></script>
 </body>
 </html>
